--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "WebGL point cloud viewer",
   "scripts": {
     "lint": "eslint src",
-    "test": "npm run lint"
+    "test": "mocha './specs/*.spec.js'"
   },
   "dependencies": {
     "eslint": "^4.18.2",
@@ -29,6 +29,7 @@
   "license": "BSD-2-CLAUSE",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.4"
+    "mocha": "^5.0.4",
+    "sinon": "^4.4.8"
   }
 }
